@@ -5,13 +5,25 @@ AUX famd 490 SHA256 1ce8019d276ef5f9ddaa38d0fc0eff12f66934eea21931b1f98ad8bcafc2
 DIST fam-2.7.0.tar.gz 301974 SHA256 1e0aa136693a3e9f4b43ebd71e7bd934cea31817a4a6cba2edc7aac353b8a93f SHA512 62b6222ee925eb2af1e258097c9bb676191690f38f8504ae16b1883a1019e0ac6dc7116ac2c4c596a956b3b3cfc3ce3ee7b613c319654681afb13e3ad3f284e2 WHIRLPOOL de90043aaaa6fd792975c13589564f85feb735738b9476b57e80d26a224fcb6f3a858ae383417e5ea48c2fa28b1a7e9c33d729caff5bb417bfbfa840ec228e47
 DIST fam_2.7.0-17.diff.gz 28056 SHA256 2362384d1fbde5dcbccf70f617aedbcae44d3f826a5b9df1331b070da1e0d5c2 SHA512 76b14e1d17713eb86d52cb804d34012e5369b5f4e8bcbdc73a063d2ad9219e0c4a261cef9e144ee07744a953a2e893bdf2ceeefcf21edc7a2ac5e70a51a8e209 WHIRLPOOL 59ed522ccfc8825051d1b281ced215c8b045dc0021bf0f28755aeb1f580ebb6eddb09934128aed51e91ea3d0ac24bfd976f0733ac90b7ef0e377fa982996efbd
 EBUILD fam-2.7.0-r6.ebuild 1305 SHA256 23c523776e0fb7d3aa5602856010700a6601ef1ce13aaa5ae23eb76f66208312 SHA512 5faad428b1b579f2abb6872d433c660abd0a1bcdee55d1a3fdd4eb9a7021db84e1b592283b07ed63d36c2edd7256f2fe0f1cd9dacbc35b1c28e215a227614083 WHIRLPOOL 53905e29872f0291b42ef15bbadba82892a8cc9032f0dc7928f6e6016e6be1eec1e512559b24c72782a08f868081df43315efc8cbc936bba8674394bb21c38ac
-EBUILD fam-2.7.0-r7.ebuild 1487 SHA256 69b669526001e1be9a73aae88ea2194843883d7188cd4877f0e4d7a84151cd38 SHA512 52e811966f8c21add8580550fe27f93c5cb1adb3e1c88805dbd84fbdad9d4a31be1077b939e28eed431c082b3f2f4dc4012c244f232aba075d95e0c0062d16dc WHIRLPOOL f2a879a33a38f84a12059fb2ad2e3bcc14b167a80f22652b5586738959a15caebad9a6083c9d07349607d5b3cc081d047ce46e5471b96bc988f1d05e82167d9a
-MISC ChangeLog 13605 SHA256 28918d8eedb3510255b85482410cb7b076b0e23ac110896b6dbdf159f8ef8ee5 SHA512 cf482b84625d7eefcbcf6a067a30baf2265d8fe831fa8bd6ea4f274ef361dea8872210e8aa81f371eba462bd82020b9bd0c107105f2aa5c274cb57e31540000e WHIRLPOOL e513edd9acac55927a32e4cf79ed4538985d6676b1264697ce2141fadba01c26d28973f6e5b6ad02e750751eb38fd4695432464cab018f460a78049d06621345
+EBUILD fam-2.7.0-r7.ebuild 1504 SHA256 8023898fa89d9f04b08ee79d624be97c096c6a80fc8faa5924ca0a8e6d80ade6 SHA512 c6f2dc0aba24daea0b0ec0db20de2f5d9687c2c9470c81134a2d189862a351546b256b8e260be11c02bea6e7104437378455724e51eb0910115fcbcac7b76749 WHIRLPOOL 9ed7708fcd490f47ac935f96d58ffba83c14e1c23a1106d2311d4e919e9b445c0cb3c04e89a26915f6328b78f613d3014b06f66d1f0a5abaae366413298b164f
+MISC ChangeLog 13770 SHA256 6aa39c1393909e4a4d2b96714de89e8fdbb698018e4f90d91cb887b5f612ae2b SHA512 ffe612748effd727b3dcf1cbe3198c15f1b39e95dd3aac3bb566c1b16bc506afba2f4fc82b4e5d3c63b9cd0126e2e391cf652fa3f7980b21098ee79bb53a195b WHIRLPOOL ed9d904cb833f997b767aca1701584ad819c08150696041a1428914dadf422fbdebc13c3fdd35af9fa8ad096ff3bf751bbac03a7c0dfef3b304822038d72d0a6
 MISC metadata.xml 230 SHA256 529c3320b250d179bb9e9ae651a88ba3f2a1bca78cd1ab07d5aef28d571960ce SHA512 a7a1138a00026b873623549a80248ee704c039921fd65203098c1f81c9c4532f142de26a2743720e6a108273f4ac547a8707909f3e6001dd5844b0e7e275dba7 WHIRLPOOL dc42bdbbe8863903771b14c2511223d0a3c2c94d543cc2e211269312e522bc6cb352af4568a4a307ad1163c6feb8852d61652694ae00616f6abbdcecf840d5d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlH5ubkACgkQVWmRsqeSphNm5gCfaN1Q6bx8ajR4taTYPbN345wG
-c5EAn36kXtPnKXSZGvrTtcazXsUkNbpt
-=9IbL
+iQJ8BAEBCABmBQJSWvPPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOyeUQAIpb0hxwL/dQxk0cfoEfhFn/
+SwVVlXqn9TfiS23hP6D74/BORqO0HmW12i84ymQmU1/0yrFA9Y2MU+bdD4rVWntQ
+oVdJnn2lL50EEB3cheYtMbg3ZEymd1qme/Y/Fhwu9CSctAKv1lbD3w33AgYANMiZ
+dv08rYO0HhbeXugbVzIf/oEaVK9ROCd+y9HPEKMHy2kmnawcOclOdScKNC/w6Sgs
+rQgMysaG7EEH1kPvYAYs5XedWBRTr/0nDTBtD6YlKlQCVkbLrRSODwVjXZ+dtLoq
+CxXt4etfY2WvECH+hx3nrN+Q+rKQTHYU+b9Dh9hYcHdtKzhNyixE5T6aVJmdL89t
+A+/AAONJq5uwyPRXo0+1+uAUCE1511QBwEaNKR2EPW5WnrBFmMBgkBUDzkOnJ9ji
+6hR17r5gOKbnaHWZZm1+U5u/rHDVhQqZO6l4a39DQ0h7sbznshl7XzTrUL9oGWor
+hvM8QBPaRqmGkITmuJ1pH55NVRSSlSL2GVmp5ytFxqe/Rssunz1UmCcjy16DT8vE
+qLHGoZ4tWSXv31qWCwzO7Zq5/jOVV29r+jy0V16e1BMIa3NYxUvKitQc4/gglUTK
+3dLW3y6oDf74FIUEMQO4WvV2UnTvzAfe8t1zbY2sC0duASi4rS8O8kAdJAO7UnOf
+EwovgYdwwL5bNnqnZfsz
+=qGZH
 -----END PGP SIGNATURE-----
