@@ -8,13 +8,13 @@ DIST mingw-w64-v3.0.0.tar.bz2 7012419 SHA256 ffd381a53cb774843667ccdaeb3a23f86be
 EBUILD mingw64-runtime-2.0.1.ebuild 2026 SHA256 adda0d993766e52bfb91465e872b3f536c533c3f7d80e986cb4eb372bcfe225b SHA512 facbc691495ca703dbdbbac4477a33654ad0fe4484287603c928b480e6240f9b74142d6da67f043ab8d44952e497f1e8c999e0179d0be931533f1e2d50a53dc0 WHIRLPOOL a9cd154edb3b1b0c206417dae91af1a7b0f1fa98c557c5ddbaf635eddc952bed66c1386bd211c74a6cd217859a9f7926b1e61a8b743548d9b11f314030e3ceed
 EBUILD mingw64-runtime-2.0.7.ebuild 2026 SHA256 90c896f634eb15ac9afd02107b5ba2b46555b009a5c28aa02d6c976ddd674c94 SHA512 7b3fcc8917add71af3e02427f2793883c982df772bdf8a3875b9b85b84f0f510487bdf1ee15a73ac0d8b4b72fe6a246226ccb3bbd76867e278a391444850897f WHIRLPOOL edb5f8e0998b9952f6072d2d13572f6c3f45b9c1f886f59be52f3387e3e58f7c8594a2d5fc766d5a62ab3873e5790f5901f86d79998292a0b4595ec2601db74d
 EBUILD mingw64-runtime-2.0.8.ebuild 2027 SHA256 0b6108ac6a2a6114cf28536a09082b7391c862f7af4f629aadff58330ec721ac SHA512 7253f6cb737ceb251893e9eeef7e4aa19c2928800780dd4ef69608d0ff49eb6577abb432bf209433b4a876806a5a12f3733e97487a6da367405d726c782bae2d WHIRLPOOL 5916ad806f53f34e33d3f13bb3a9e5b6ea0f8a58c3867c5b56574d2fe988935c91c03d82a0f5253c31e22e08912efe1c658e17c351166de9610abf6a622dff82
-EBUILD mingw64-runtime-3.0.0.ebuild 1984 SHA256 22d639542291bd33b96db09dad2c472a2ab06901f843729817f102021d5d2d89 SHA512 3e86ecc2c98bad43bfed992c28ada9ffca4b92263f8f960d5a657030671a5e76a92483d3ff50a7614a5d06d1a2dc35a4a4b24fa7c93144d002ef86c94ac0867b WHIRLPOOL 0a63784e204a849ecc0cabe5fe552b23133b90b5fc806f5be6c5c02d9bca317edacc7885673beb45182a54b74d68f73d70592202f90ab6ecb53223d69cdb08c2
-MISC ChangeLog 2468 SHA256 87437b3691a00bf2b4f0220d6d857296c989e2d34bfc7c4a0fb8ff928783e9cb SHA512 f1720ce0f58daa51b2afd40ad9cd4ea6d252aea78bbc5947dd77362bcfbf4838637e5ba42ba3a37b2366b7ab3696788490474e82cbf11540102f9f69ae3779f3 WHIRLPOOL 99e83e0e4e8c540d1c4453ef8c2e6b5cdfad3dbf0047876d9bd7a3e484f5c5ffe3891648966a2f5d713fd62db974f8e8ee764be1149dc2a0d0beeaed763b9496
-MISC metadata.xml 295 SHA256 d3407ead14f45b6ff9cbe4b48b3e4abfa460a36007447996f6b2196830719408 SHA512 f00ca4d1cf8789ec352f15c80a35efb43b4da5daae31d392ea64390be0186d5299a4cc5592adf9386fc32e667d19f71d748c4a01f4921c402761a52efe4eb54b WHIRLPOOL 36c20b2ba9ddb709dce5b11d2c1ab423a1c4151a1c411e969a33f670ac908b7684a6f74886b475b4f098286e9b6805b120d3891367e98ba923353233ded6bab5
+EBUILD mingw64-runtime-3.0.0.ebuild 1952 SHA256 03a322392a44e48ccdade077f75993a4688666e33e5d1a26e1eb01928e10b6d4 SHA512 c98d0b771e4e33896147dbdef98c26976b2d6ae2f3404d9304413eede3a9b72ecba9a5cb2320e587067a9eca0f0b953f3f78b9a39c92485bf2b4b079e1e448e8 WHIRLPOOL 85619756847f7044a4f8a9d8d8d1fcbc304fde815a5ce61e8be68839a5000645c2fbd30911c23c7367b1d88b2aaa8418fbca2f530e5529954afb26b79aaf1d2a
+MISC ChangeLog 2594 SHA256 77ab007e4a09c6be4b95c8d18e0cac289232cab74acbaf265165b193aa30480f SHA512 b140b83beff198dfd85cd88eef80182136dbd7b1d7a3c1a9da2c3c825795a1d5c55c7c2f6a39d4a5b31f02cdd0c632c6ffb963c7b272a95d1864c70b4e0c3cab WHIRLPOOL 704866eca2cf8aef2f9d3ce9e3abad026c4c45f000ef45471586d2ba765828ad565cc31c49ad4475b55bbc8bb49b876383d177861b54eee94cf7766f69494d95
+MISC metadata.xml 228 SHA256 24d02522b86de4d4fdd4a19b0f07556cf0d371ccad8d870339068793dfe18570 SHA512 811d51b71d4a117389dbf64a5c307466c9416761f7fb2b12a335ee501ce515f1bc1924f5dd610cdac06b3ffdec7f58bd75d3a2c3ef9182a1ad1263c07f34593a WHIRLPOOL 9bc77b7dcf1138516c9ae0eae06f6952492acb2ac7f78fad77b2503e6afc7d835a5b7d537354232fa080593e11a3d6bf03cd4716fca1b65825a2c0a40ca377d0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJJM18ACgkQXYk9GL8g3FGJwgEApbxeS/11ike6bu3tDfTrDzWL
-tvu70lWOa3ze+mySBygBAIc1path0JW6gcSeK8+ZEhR/6E8z9Fr+jJPX2/YJDrXq
-=qxFb
+iF4EAREIAAYFAlJa80gACgkQXYk9GL8g3FHEmQEAiY2W7C3w+5pvrP/FjFJWYU8R
+YBJ8LtErCaMPQ+jnTRMA/jHnswwVtAaTdljfh+4uec5tMOoLKPlf4sGZiWqP83ws
+=Movu
 -----END PGP SIGNATURE-----
