@@ -6,8 +6,5 @@
   <flag name='idl'>
     Install idl files.
   </flag>
-  <flag name='tools'>
-    Build and install extra tools.
-  </flag>
 </use>
 </pkgmetadata>
