@@ -10,4 +10,4 @@ RDEPEND=|| ( net-nds/rpcbind >=net-nds/portmap-5b-r6 ) !app-admin/gamin
 SLOT=0
 SRC_URI=ftp://oss.sgi.com/projects/fam/download/stable/fam-2.7.0.tar.gz mirror://debian/pool/main/f/fam/fam_2.7.0-17.diff.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multilib-build	0bf1bbb0a7a26fc4daf3e660ef004ee5	multilib-minimal	09c985fcba99d0f16fc7161fffa80730	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ba8ef18748c7d05ceb6266fc765c6048
+_md5_=6a981e21efd5d9d71d4b78f8f8a65430
