@@ -2,11 +2,11 @@ DEFINED_PHASES=configure install setup
 DESCRIPTION=Free Win64 runtime and import library definitions
 EAPI=5
 HOMEPAGE=http://mingw-w64.sourceforge.net/
-IUSE=crosscompile_opts_headers-only idl tools
+IUSE=crosscompile_opts_headers-only idl
 KEYWORDS=~amd64 ~x86
 LICENSE=BSD
 RESTRICT=strip
 SLOT=0
 SRC_URI=mirror://sourceforge/mingw-w64/mingw-w64/mingw-w64-release/mingw-w64-v3.0.0.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ef90856975c1167c161a2cfc76308fa7
+_md5_=e7613e9962d382fb718c5c61186d8b41
