@@ -9,6 +9,6 @@ LICENSE=GPL-2
 RDEPEND=dev-qt/qtgui:4[qt3support] ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 )
 REQUIRED_USE=|| ( ruby_targets_ruby19 )
 SLOT=0
-SRC_URI=http://178.77.72.242/downloads/klayout-0.22.8.tar.gz
+SRC_URI=http://178.77.72.242/downloads/klayout-0.22.9.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=688519d5f950aa11e6498a931a51b4ff
+_md5_=82a5eecf98e7baae695ad7cdeabbbc7a
