@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/klayout/klayout-0.22.8.ebuild,v 1.2 2013/10/13 18:35:55 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/klayout/klayout-0.22.9.ebuild,v 1.1 2013/10/13 19:13:05 dilfridge Exp $
 
 EAPI=5
 
