@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/mingw64-runtime
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/mingw64-runtime/ChangeLog,v 1.13 2013/09/30 08:16:27 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/mingw64-runtime/ChangeLog,v 1.14 2013/10/13 19:23:48 alonbl Exp $
+
+  13 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> metadata.xml,
+  mingw64-runtime-3.0.0.ebuild:
+  remove tools USE, bug#487032
 
 *mingw64-runtime-3.0.0 (30 Sep 2013)
 
