@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/fam
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/fam/ChangeLog,v 1.77 2013/08/01 01:28:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/fam/ChangeLog,v 1.78 2013/10/13 19:25:54 mgorny Exp $
+
+  13 Oct 2013; Michał Górny <mgorny@gentoo.org> fam-2.7.0-r7.ebuild:
+  Explicitly call einstalldocs in multilib_src_install_all() to accomodate bug
+  #483304.
 
 *fam-2.7.0-r7 (01 Aug 2013)
 
